--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,12 +2,11 @@
   width: max-content;
   display: flex;
   align-items: center;
-  margin-top: 4%;
-  margin-left: 25%;
-  margin-right: 75%;
 }
 
 .au-card {
+  justify-content: center;
+  align-items: center;
   width: 500px;
   height: 420px;
   margin-left: 30%;
@@ -17,8 +16,6 @@
 
 .list-grp {
   width: 80%;
-  margin-left: 10%;
-  margin-right: 90%;
   margin-top: 5%;
   display: flex;
   flex-direction: column;
